Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    "outputs": [],
    "source": [
     "labels = df.quality\n",
-    "labels_removed_df = None\n",
+    "labels_removed_df = df.drop(columns=\"quality\")\n",
     "scaler = None\n",
     "scaled_df = None\n",
     "\n",
