Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,8 +255,8 @@
    "source": [
     "labels = df.quality\n",
     "labels_removed_df = df.drop(columns=\"quality\")\n",
-    "scaler = None\n",
-    "scaled_df = None\n",
+    "scaler = StandardScaler()\n",
+    "scaled_df = \n",
     "\n",
     "X_train, X_test, y_train, y_test = None"
    ]
