Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,7 @@
     "labels = df.quality\n",
     "labels_removed_df = df.drop(columns=\"quality\")\n",
     "scaler = StandardScaler()\n",
-    "scaled_df = \n",
+    "scaled_df = labels_removed_df.scaler\n",
     "\n",
     "X_train, X_test, y_train, y_test = None"
    ]
