--- a/index.ipynb
+++ b/index.ipynb
@@ -256,9 +256,9 @@
     "labels = df.quality\n",
     "labels_removed_df = df.drop(columns=\"quality\")\n",
     "scaler = StandardScaler()\n",
-    "scaled_df = labels_removed_df.scaler\n",
+    "scaled_df = labels_removed_df.scaler.fit_transform()\n",
     "\n",
-    "X_train, X_test, y_train, y_test = None"
+    "X_train, X_test, y_train, y_test = train_test_split"
    ]
   },
   {
