Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = None\n",
+    "clf = \n",
     "clf.fit(None, None)\n",
     "training_preds = None\n",
     "val_preds = None\n",
