Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,8 +276,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = \n",
-    "clf.fit(None, None)\n",
+    "clf = xgb()\n",
+    "clf.fit(X, None)\n",
     "training_preds = None\n",
     "val_preds = None\n",
     "training_accuracy = None\n",
