--- a/index.ipynb
+++ b/index.ipynb
@@ -277,8 +277,8 @@
    "outputs": [],
    "source": [
     "clf = xgb()\n",
-    "clf.fit(X, None)\n",
-    "training_preds = None\n",
+    "clf.fit(X_train, y_train)\n",
+    "training_preds = clf\n",
     "val_preds = None\n",
     "training_accuracy = None\n",
     "val_accuracy = None\n",
