Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
    "source": [
     "clf = xgb()\n",
     "model = clf.fit(X_train, y_train)\n",
-    "training_preds = \n",
+    "training_preds = model.\n",
     "val_preds = None\n",
     "training_accuracy = None\n",
     "val_accuracy = None\n",
