Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,8 +277,8 @@
    "outputs": [],
    "source": [
     "clf = xgb()\n",
-    "model = clf.fit(X_train, y_train)\n",
-    "training_preds = model.\n",
+    "clf.fit(X_train, y_train)\n",
+    "training_preds = clf.prefict(X_trai)\n",
     "val_preds = None\n",
     "training_accuracy = None\n",
     "val_accuracy = None\n",
