Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -278,8 +278,8 @@
    "source": [
     "clf = xgb()\n",
     "clf.fit(X_train, y_train)\n",
-    "training_preds = clf.prefict(X_trai)\n",
-    "val_preds = None\n",
+    "training_preds = clf.predict(X_train)\n",
+    "val_preds = clf.predict(X_test)\n",
     "training_accuracy = None\n",
     "val_accuracy = None\n",
     "\n",
