--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
     "training_preds = clf.predict(X_train)\n",
     "val_preds = clf.predict(X_test)\n",
     "training_accuracy = np.sum(training_preds==y_train) / len(y_train)\n",
-    "val_accuracy = \n",
+    "val_accuracy = np.sum(tval_preds==y_test) / len(y_train)\n",
     "\n",
     "print(\"Training Accuracy: {:.4}%\".format(training_accuracy * 100))\n",
     "print(\"Validation accuracy: {:.4}%\".format(val_accuracy * 100))"
