Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "clf = xgb()\n",
+    "clf = xgb.()\n",
     "clf.fit(X_train, y_train)\n",
     "training_preds = clf.predict(X_train)\n",
     "val_preds = clf.predict(X_test)\n",
