--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_clf = GridSearchCV(clf, param_grid=param_grid, scoring=\"accuracy\", cv=N)\n",
+    "grid_clf = GridSearchCV(clf, param_grid=param_grid, \n",
+    "                        scoring=\"accuracy\", cv=None, n_jobs=1)\n",
     "grid_clf.fit(None, None)\n",
     "\n",
     "best_parameters = None\n",
