Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -355,7 +355,9 @@
    "outputs": [],
    "source": [
     "grid_clf = GridSearchCV(clf, param_grid=param_grid, \n",
-    "                        scoring=\"accuracy\", cv=None, n_jobs=1)\n",
+    "                        scoring=\"accuracy\",\n",
+    "                        cv=None,\n",
+    "                        n_jobs=1)\n",
     "grid_clf.fit(None, None)\n",
     "\n",
     "best_parameters = None\n",
