Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -358,7 +358,7 @@
     "                        scoring=\"accuracy\",\n",
     "                        cv=None,\n",
     "                        n_jobs=1)\n",
-    "grid_clf.fit(None, None)\n",
+    "grid_clf.fit(X_train, y_train)\n",
     "\n",
     "best_parameters = None\n",
     "\n",
