Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,9 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'param_grid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-231f2d4423ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m grid_clf = GridSearchCV(clf, param_grid=param_grid, \n\u001b[0m\u001b[1;32m      2\u001b[0m                         \u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"accuracy\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                         \u001b[0mcv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                         n_jobs=1)\n\u001b[1;32m      5\u001b[0m \u001b[0mgrid_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'param_grid' is not defined"
+     ]
+    }
+   ],
    "source": [
     "grid_clf = GridSearchCV(clf, param_grid=param_grid, \n",
     "                        scoring=\"accuracy\",\n",
@@ -360,7 +372,7 @@
     "                        n_jobs=1)\n",
     "grid_clf.fit(X_train, y_train)\n",
     "\n",
-    "best_parameters = grid_clf.\n",
+    "best_parameters = grid_clf.best_parameters\n",
     "\n",
     "print(\"Grid Search found the following optimal parameters: \")\n",
     "for param_name in sorted(best_parameters.keys()):\n",
