--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,7 @@
     "for param_name in sorted(best_parameters.keys()):\n",
     "    print(\"%s: %r\" % (param_name, best_parameters[param_name]))\n",
     "\n",
-    "training_preds = clf()\n",
+    "training_preds = clf.fit(X)\n",
     "val_preds = None\n",
     "training_accuracy = None\n",
     "val_accuracy = None\n",
