--- a/index.ipynb
+++ b/index.ipynb
@@ -399,10 +399,10 @@
     "for param_name in sorted(best_parameters.keys()):\n",
     "    print(\"%s: %r\" % (param_name, best_parameters[param_name]))\n",
     "\n",
-    "training_preds = clf.fit(X_train, y_train, )\n",
-    "val_preds = None\n",
-    "training_accuracy = None\n",
-    "val_accuracy = None\n",
+    "training_preds = grid_clf.predict(X_train)\n",
+    "val_preds = grid_clf.predict(X_test)\n",
+    "training_accuracy = accuracy_score(y_train, training_preds)\n",
+    "val_accuracy = accuracy_score(y_test, val_preds)\n",
     "\n",
     "print(\"\")\n",
     "print(\"Training Accuracy: {:.4}%\".format(training_accuracy * 100))\n",
