--- a/index.ipynb
+++ b/index.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -360,29 +360,11 @@
       "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2053: FutureWarning: You should specify a value for 'cv' instead of relying on the default value. The default value will change from 3 to 5 in version 0.22.\n",
       "  warnings.warn(CV_WARNING, FutureWarning)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grid Search found the following optimal parameters: \n",
-      "learning_rate: 0.1\n",
-      "max_depth: 6\n",
-      "min_child_weight: 10\n",
-      "n_estimators: 250\n",
-      "subsample: 0.7\n",
-      "\n",
-      "Training Accuracy: 95.41%\n",
-      "Validation accuracy: 65.25%\n"
-     ]
     }
    ],
    "source": [
-    "grid_clf = GridSearchCV(clf, param_grid=param_grid, \n",
-    "                        scoring=\"accuracy\",\n",
-    "                        cv=None,\n",
-    "                        n_jobs=1)\n",
-    "grid_clf.fit(X_train, y_train)\n",
+    "grid_clf = GridSearchCV(clf, param_grid, scoring='accuracy', cv=None, n_jobs=1)\n",
+    "grid_clf.fit(scaled_df, labels)\n",
     "\n",
     "best_parameters = grid_clf.best_params_\n",
     "\n",
